--- a/The Hitchhiker Prophecy/Modules/Home/Home Scene/Views/HomeSceneViewController.xib
+++ b/The Hitchhiker Prophecy/Modules/Home/Home Scene/Views/HomeSceneViewController.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AUP-h6-Bvn">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="92" width="414" height="770"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9UB-i4-fMo">
                         <size key="itemSize" width="128" height="128"/>
@@ -44,13 +44,13 @@
             <color key="backgroundColor" systemColor="viewFlipsideBackgroundColor"/>
             <constraints>
                 <constraint firstItem="p9K-a1-ut4" firstAttribute="trailing" secondItem="Hx3-XZ-lgf" secondAttribute="trailing" constant="16" id="0hJ-Az-ju2"/>
-                <constraint firstItem="AUP-h6-Bvn" firstAttribute="top" secondItem="p9K-a1-ut4" secondAttribute="top" id="XPy-ei-u2n"/>
                 <constraint firstItem="AUP-h6-Bvn" firstAttribute="leading" secondItem="p9K-a1-ut4" secondAttribute="leading" id="a7A-yy-SZo"/>
                 <constraint firstItem="p9K-a1-ut4" firstAttribute="trailing" secondItem="AUP-h6-Bvn" secondAttribute="trailing" id="fhj-U1-ffZ"/>
+                <constraint firstItem="AUP-h6-Bvn" firstAttribute="top" secondItem="Hx3-XZ-lgf" secondAttribute="bottom" constant="16" id="iIp-FD-4j8"/>
                 <constraint firstItem="p9K-a1-ut4" firstAttribute="bottom" secondItem="AUP-h6-Bvn" secondAttribute="bottom" id="jSF-sG-axq"/>
                 <constraint firstItem="Hx3-XZ-lgf" firstAttribute="top" secondItem="p9K-a1-ut4" secondAttribute="top" id="yCY-JY-jSW"/>
             </constraints>
-            <point key="canvasLocation" x="187" y="145"/>
+            <point key="canvasLocation" x="186.95652173913044" y="144.64285714285714"/>
         </view>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
     </objects>
